Added background image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Webpage!</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Miguel Rodrigues: a Software Tester!</title>
+        <link rel="stylesheet" href="index.css">
     </head>
+    <body> 
+        <main>
+        </main>
+    </body>
 </html>
