--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body> 
-        <main>
-        </main>
+        <header>
+            <h1 id="my_name">Miguel Rodrigues</h1>
+            <h3 id="page_title">My First Website</h3>
+        </header>
+        <div id="menu">
+            
+        </div>
     </body>
 </html>
