--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Miguel Rodrigues: a Software Tester!</title>
+        <title>MR: My First Website</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <body> 
@@ -11,8 +11,10 @@
             <h1 id="my_name">Miguel Rodrigues</h1>
             <h3 id="page_title">My First Website</h3>
         </header>
-        <div id="menu">
-            
-        </div>
+        <section id="menu">
+            <div id="about_me">About me</div>
+            <div id="my_career">My Career</div>
+            <div id="faq">FAQ</div>
+        </section>
     </body>
 </html>
