--- a/index.html
+++ b/index.html
@@ -17,30 +17,37 @@
                 <section id="menu">
                     <div name="about_me"><a href="#about_me" accesskey="1">About me</a></div>
                     <div name="my_career">My Career</div>
-                    <div id="faq">FAQ</div>
+                    <div name="faq">FAQ</div>
                 </section>
             </div>
             <section id="about_me">
-                <img src="images/chibi.png">
+                <img src="images/room.png">
                 <h3>About me</h3>
-                <p>I started my professional career as a mechanical engineer but always loved digital technologies. 
-                    Once the opportunity to work in the IT industry appeared I decided to grab it and give it a try and so I became a software tester. 
-                    I also enjoy programming a lot and learnt how to program using Python and JAVA. Furthermore, since I've recently learnt about HTML and CSS, 
+                    <p>I started my professional career as a mechanical engineer but always loved digital technologies. 
+                    Once the opportunity to work in the IT industry appeared I decided to give it a try and so I became a software tester.
+                    I also enjoy programming a lot and learnt how to program using Python and JAVA. Furthermore, since I've recently learnt about HTML and CSS 
                     I decided to put my skills to the test and build this webpage where I talk a bit about myself so that you can get to know me better. 
-                    Other than programming I enjoy reading, playing videogames, traveling and going for peaceful walks outside. 
-                    I like many things more but those are the main ones! So, what do you think? Want to be friends? 😊</p>
+                    I intend on doing more projects and post about them here but I'm taking it one step a time. Other than programming I enjoy:</p>
+                    <br>
+                    <ul id="hobbies">
+                        <li>📚 Reading 📚</li>
+                        <li>🎮 Gaming 🎮</li>
+                        <li>🗺️ Traveling 🗺️</li>
+                        <li>🚶🏻  Peaceful walks 🚶🏻</li>
+                    </ul>
+                    <br>
+                    <p>I like many things more but those are the main ones! <br> So, what do you think? Want to be friends? 😊</p>
             </section>
             <section id="my_career">
                 <img src="images/chibi.png">
-                <h3>About me</h3>
+                <h3>My Career</h3>
                 <p>I started my professional career as a mechanical engineer but always loved digital technologies. 
                     Once the opportunity to work in the IT industry appeared I decided to grab it and give it a try and so I became a software tester. 
                     I also enjoy programming a lot and learnt how to program using Python and JAVA. Furthermore, since I've recently learnt about HTML and CSS, 
                     I decided to put my skills to the test and build this webpage where I talk a bit about myself so that you can get to know me better. 
                     Other than programming I enjoy reading, playing videogames, traveling and going for peaceful walks outside. 
-                    I like many things more but those are the main ones! So, what do you think? Want to be friends? 😊</p>
+                    I like many things more but those are the main ones!So, what do you think? Want to be friends? 😊<p/>
             </section>
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         </main>
     </body>
 </html>
