--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#faq" accesskey="3"><div name="faq">FAQ</div></a>
                 </section>
             </div>
-            <div class="container">
+            
             <section id="about_me">
                 <img src="images/room.png">
                 <h3>About me</h3>
@@ -41,27 +41,26 @@
                     <br>
                     <p class="section_p">I like many things more but those are the main ones! <br> So, what do you think? Want to be friends? 😊</p>
             </section>
-            <div class="small-container"></div>
-            </div>
+             <!-- 
             <section id="skills">
-                <img src="images/aaaa.jpg">
+                <img src="images/skills.jpg">
                 <h3>My Skills</h3>
                 <table>
                     <tr>
-                      <th>Programming</th>
-                      <th>Testing</th>
-                      <th>Soft Skills</th>
-                      <th>Languages</th>
+                        <th>Programming</th>
+                        <th>Testing</th>
+                        <th>Soft Skills</th>
+                        <th>Languages</th>
                     </tr>
                     <tr>
-                      <td>HTML/CSS</td>
-                      <td>Functional Testing</td>
-                      <td>Portuguese</td>
+                        <td>HTML/CSS</td>
+                        <td>Functional Testing</td>
+                        <td>Portuguese</td>
                     </tr>
                     <tr>
-                      <td>Java</td>
-                      <td>Integration Testing</td>
-                      <td>English</td>
+                        <td>Java</td>
+                        <td>Integration Testing</td>
+                        <td>English</td>
                     </tr>
                     <tr>
                         <td>MatLab</td>
@@ -118,6 +117,7 @@
             <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
                 <i class="fa fa-home"></i>      
             </button>
+        -->
         </main>
     </body>
 </html>
