Complete Skills Section

--- a/index.html
+++ b/index.html
@@ -47,34 +47,46 @@
             <section id="skills">
                 <img src="images/skillsbw.jpg">
                 <h3>My Skills</h3>
-                <table>
-                    <tr>
-                        <th>Programming</th>
-                        <th>Testing</th>
-                        <th>Soft Skills</th>
-                        <th>Languages</th>
-                    </tr>
-                    <tr>
-                        <td>HTML/CSS</td>
-                        <td>Functional Testing</td>
-                        <td>Portuguese</td>
-                    </tr>
-                    <tr>
-                        <td>Java</td>
-                        <td>Integration Testing</td>
-                        <td>English</td>
-                    </tr>
-                    <tr>
-                        <td>MatLab</td>
-                        <td>Performance Testing</td>
-                    </tr>
-                    <tr>
-                        <td>Test Automation</td>
-                    </tr>
-                    <tr>
-                        <td>SQL</td>
-                    </tr>
-                </table>
+                <ul>
+                    <li>
+                      <img src="images/python.png" alt="My reflection in the mirror" loading="lazy">
+                    </li>
+                    <li>
+                      <img src="images/java.png" alt="Jordan holding an iced coffee against his head to cool down" loading="lazy">
+                    </li>
+                    <li>
+                      <img src="images/rfw.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                    </li>
+                    <li>
+                        <img src="images/Selenium_Logo.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/matlab.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/jenkins.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/ISTQB_CT.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/jira.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/sql.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/html.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/css.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                      <li>
+                        <img src="images/xray.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      </li>
+                    <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
+                    <li></li>
+                  </ul>
             </section>
             <section id="faq">
                 <h3>FAQ</h3>
