--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Miguel Rodrigues</title>
         <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="smartphone_portrait.css">
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="mobile_portrait.css">
+        <link rel="stylesheet" href="mobile_landscape.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">   
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
         <script defer src="scripts.js"></script>
     </head>
@@ -19,7 +20,7 @@
             <div id="welcome_screen">
                 <header>
                     <h1 id="my_name">Miguel Rodrigues</h1>
-                    <h3 id="page_title">My First Website</h3>
+                    <h3 id="page_title">Software Tester</h3>
                 </header>
                 <section id="menu">
                     <a href="#about_me" accesskey="1"><div name="about_me">About me</div></a>
@@ -28,7 +29,7 @@
                 </section>
             </div>
             <section id="about_me">
-                <img src="images/room.png">
+                <img src="images/room.png" alt="A nerd's room">
                 <h3>About me</h3>
                     <p class="section_p">I started my professional career as a mechanical engineer but always loved digital technologies. 
                     Once the opportunity to work in the IT industry appeared I decided to give it a try and so I became a software tester.
@@ -46,44 +47,44 @@
                     <p class="section_p">I like many things more but those are the main ones! <br> So, what do you think? Want to be friends? 😊</p>
             </section>
             <section id="skills">
-                <img src="images/skillsbw.jpg">
+                <img src="images/skillsbw.jpg" alt="A person watching online videos">
                 <h3>My Skills</h3>
                 <ul>
                     <li>
-                      <img src="images/python.png" alt="My reflection in the mirror" loading="lazy">
+                      <img src="images/python.png" alt="Python programming language logo">
                     </li>
                     <li>
-                      <img src="images/java.png" alt="Jordan holding an iced coffee against his head to cool down" loading="lazy">
+                      <img src="images/java.png" alt="Java programming language logo">
                     </li>
                     <li>
-                      <img src="images/rfw.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                      <img src="images/rfw.png" alt="Robot Framework logo">
                     </li>
                     <li>
-                        <img src="images/Selenium_Logo.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/Selenium_Logo.png" alt="Selenium logo">
                       </li>
                       <li>
-                        <img src="images/matlab.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/matlab.png" alt="MatLab logo">
                       </li>
                       <li>
-                        <img src="images/jenkins.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/jenkins.png" alt="Jenkins logo">
                       </li>
                       <li>
-                        <img src="images/ISTQB_CT.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/ISTQB_CT.png" alt="ISTQB certification logo">
                       </li>
                       <li>
-                        <img src="images/jira.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/jira.png" alt="Jira logo">
                       </li>
                       <li>
-                        <img src="images/sql.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/sql.png" alt="SQL logo">
                       </li>
                       <li>
-                        <img src="images/html.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/html.png" alt="HTML logo">
                       </li>
                       <li>
-                        <img src="images/css.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/css.png" alt="CSS logo">
                       </li>
                       <li>
-                        <img src="images/xray.png" alt="Jordan and Sarah looking at the menu in a coffee shop" loading="lazy">
+                        <img src="images/xray.png" alt="XRay Test Management tool logo">
                       </li>
                     <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
                     <li></li>
