Added more responsive features

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Miguel Rodrigues</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="desktop_sizes.css">
-        <link rel="stylesheet" href="mobile_portrait.css">
-        <link rel="stylesheet" href="mobile_landscape.css">
+        <link rel="stylesheet" href="css/variables.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/desktop_sizes.css">
+        <link rel="stylesheet" href="css/mobile_portrait.css">
+        <link rel="stylesheet" href="css/mobile_landscape.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">   
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
