New Tab Icon; Added Linkedin and GitHub links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         <link rel="stylesheet" href="css/mobile_portrait.css">
         <link rel="stylesheet" href="css/mobile_landscape.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">   
+        <link rel="apple-touch-icon" sizes="180x180" href="images/tab_icon/apple-touch-icon.png">
+        <link rel="icon" type="image/x-icon" href="images/tab_icon/favicon.ico">   
+        <link rel="icon" type="image/png" sizes="32x32" href="images/tab_icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/tab_icon/favicon-16x16.png">
+        <link rel="manifest" href="images/tab_icon/site.webmanifest">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
         <script defer src="scripts.js"></script>
     </head>
@@ -25,6 +29,10 @@
                     <h3 id="page_title">Software Tester</h3>
                 </header>
                 <section id="menu">
+                    <div class="social_media">
+                      <a href="https://www.linkedin.com/in/miguelamrodrigues/" target="_blank"><i class='fa fa-linkedin-square fa_custom'></i></a>
+                      <a href="https://github.com/Mamr245" target="_blank"><i class="fa fa-github fa_custom"></i></a>
+                    </div>
                     <a href="#about_me" accesskey="1"><div name="about_me">About me</div></a>
                     <a href="#skills" accesskey="2"><div name="skills">My Skills</div></a>
                     <a href="#faq" accesskey="3"><div name="faq">FAQ</div></a>
@@ -53,40 +61,40 @@
                 <h3>My Skills</h3>
                 <ul>
                     <li>
-                      <img src="images/python.png" alt="Python programming language logo">
+                      <img src="images/skills/python.png" alt="Python programming language logo">
                     </li>
                     <li>
-                      <img src="images/java.png" alt="Java programming language logo">
+                      <img src="images/skills/java.png" alt="Java programming language logo">
                     </li>
                     <li>
-                      <img src="images/rfw.png" alt="Robot Framework logo">
+                      <img src="images/skills/rfw.png" alt="Robot Framework logo">
                     </li>
                     <li>
-                        <img src="images/Selenium_Logo.png" alt="Selenium logo">
+                        <img src="images/skills/Selenium_Logo.png" alt="Selenium logo">
                       </li>
                       <li>
-                        <img src="images/matlab.png" alt="MatLab logo">
+                        <img src="images/skills/matlab.png" alt="MatLab logo">
                       </li>
                       <li>
-                        <img src="images/jenkins.png" alt="Jenkins logo">
+                        <img src="images/skills/jenkins.png" alt="Jenkins logo">
                       </li>
                       <li>
-                        <img src="images/ISTQB_CT.png" alt="ISTQB certification logo">
+                        <img src="images/skills/ISTQB_CT.png" alt="ISTQB certification logo">
                       </li>
                       <li>
-                        <img src="images/jira.png" alt="Jira logo">
+                        <img src="images/skills/jira.png" alt="Jira logo">
                       </li>
                       <li>
-                        <img src="images/sql.png" alt="SQL logo">
+                        <img src="images/skills/sql.png" alt="SQL logo">
                       </li>
                       <li>
-                        <img src="images/html.png" alt="HTML logo">
+                        <img src="images/skills/html.png" alt="HTML logo">
                       </li>
                       <li>
-                        <img src="images/css.png" alt="CSS logo">
+                        <img src="images/skills/css.png" alt="CSS logo">
                       </li>
                       <li>
-                        <img src="images/xray.png" alt="XRay Test Management tool logo">
+                        <img src="images/skills/xray.png" alt="XRay Test Management tool logo">
                       </li>
                     <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
                     <li></li>
