Open Graph, Twitter Card, Small Tweaks

--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Miguel Rodrigues - Software Tester</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Miguel Rodrigues</title>
+        <meta name="description" content="ISTQB Certified Software Tester | 
+        Ensuring that the apps you use are almost defect free and working as you expect them to!">
+        <!-- TODO: Get an online domain -->
+        <link rel="canonical" href="https://www.miguelamrodrigues.com"> 
+        <!-- Geo Location-->
+        <meta name="geo.region" content="PT-09"/>
+        <meta name="geo.position" content="39.7;-8.1"/>
+        <meta name="ICBM" content="39.7, -8.1"/>
+        <!-- Open Graph -->
+        <meta property="og:title" content="Miguel Rodrigues - Software Tester"/>
+        <meta property="og:description" content="ISTQB Certified Software Tester | 
+        Ensuring that the apps you use are almost defect free and working as you expect them to!">
+        <meta property="og:type" content="profile"/>
+        <meta property="og:image" content="images/bug_found.jpg">
+        <meta property="og:url" content="https://www.miguelamrodrigues.com"/>
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="https://www.miguelamrodrigues.com" />
+        <meta name="twitter:title" content="Miguel Rodrigues - Software Tester"/>
+        <meta name="twitter:description" content="ISTQB Certified Software Tester | 
+        Ensuring that the apps you use are almost defect free and working as you expect them to!"/>
+        <meta name="twitter:image" content="images/bug_found.jpg" />
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/desktop_sizes.css">
         <link rel="stylesheet" href="css/mobile_portrait.css">
         <link rel="stylesheet" href="css/mobile_landscape.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" />
+        <!-- Icons -->
         <link rel="apple-touch-icon" sizes="180x180" href="images/tab_icon/apple-touch-icon.png">
         <link rel="icon" type="image/x-icon" href="images/tab_icon/favicon.ico">   
         <link rel="icon" type="image/png" sizes="32x32" href="images/tab_icon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="images/tab_icon/favicon-16x16.png">
         <link rel="manifest" href="images/tab_icon/site.webmanifest">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
+        <!-- JavaScript scripts -->
         <script defer src="scripts.js"></script>
     </head>
     <body>
@@ -26,7 +51,7 @@
             <div id="welcome_screen">
                 <header>
                     <h1 id="my_name">Miguel Rodrigues</h1>
-                    <h3 id="page_title">Software Tester</h3>
+                    <h2 id="page_title">Software Tester</h2>
                 </header>
                 <section id="menu">
                     <div class="social_media">
@@ -39,7 +64,7 @@
                 </section>
             </div>
             <section id="about_me">
-                <img src="images/room.png" alt="A nerd's room">
+                <img src="images/room.png" alt="A tester's room">
                 <h3>About me</h3>
                     <p class="section_p">I started my professional career as a mechanical engineer but always loved digital technologies. 
                     Once the opportunity to work in the IT industry appeared I decided to give it a try and so I became a software tester.
@@ -57,7 +82,7 @@
                     <p class="section_p">I like many things more but those are the main ones! <br> So, what do you think? Want to be friends? 😊</p>
             </section>
             <section id="skills">
-                <img src="images/skillsbw.jpg" alt="A person watching online videos">
+                <img src="images/skillsbw.jpg" alt="Testing Youtube.com">
                 <h3>My Skills</h3>
                 <ul>
                     <li>
@@ -96,7 +121,7 @@
                       <li>
                         <img src="images/skills/xray.png" alt="XRay Test Management tool logo">
                       </li>
-                    <!--  Adding an empty <li> here so the final photo doesn't stretch like crazy. Try removing it and see what happens!  -->
+                    <!-- Adding an empty <li> here so the final photo doesn't stretch -->
                     <li></li>
                   </ul>
             </section>
