Added docker logo to skills section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
                       <li>
                         <img src="images/skills/xray.png" alt="XRay Test Management tool logo">
                       </li>
+                      <li>
+                        <img src="images/skills/docker.png" alt="Docker logo">
+                      </li>
                     <!-- Adding an empty <li> here so the final photo doesn't stretch -->
                     <li></li>
                   </ul>
