Created one unique css file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Open Graph -->
         <meta property="og:title" content="Miguel Rodrigues - Software Tester"/>
         <meta property="og:description" content="ISTQB Certified Software Tester | 
-        Ensuring that the apps you use are almost defect free and working as you expect them to!">
+        Ensuring the apps you use are almost defect free and working as you expect them to!">
         <meta property="og:type" content="profile"/>
         <meta property="og:image" content="images/bug_found.jpg">
         <meta property="og:url" content="https://www.miguelamrodrigues.com"/>
@@ -27,11 +27,8 @@
         Ensuring that the apps you use are almost defect free and working as you expect them to!"/>
         <meta name="twitter:image" content="images/bug_found.jpg" />
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/desktop_sizes.css">
-        <link rel="stylesheet" href="css/mobile_portrait.css">
-        <link rel="stylesheet" href="css/mobile_landscape.css">
+        <link rel="preload" href="css/styles.css" as="style">
+        <link rel="stylesheet" href="css/styles.css">  
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" />
         <!-- Icons -->
