Updated current game, current book and some meta properties

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="ISTQB Certified Software Tester | 
         Ensuring that the apps you use are almost defect free and working as you expect them to!">
         <!-- TODO: Get an online domain -->
-        <link rel="canonical" href="https://www.miguelamrodrigues.com"> 
+        <link rel="canonical" href="https://miguelrodrigues.onrender.com"> 
         <!-- Geo Location-->
         <meta name="geo.region" content="PT-09"/>
         <meta name="geo.position" content="39.7;-8.1"/>
@@ -18,10 +18,10 @@
         Ensuring the apps you use are almost defect free and working as you expect them to!">
         <meta property="og:type" content="profile"/>
         <meta property="og:image" content="images/bug_found.jpg">
-        <meta property="og:url" content="https://www.miguelamrodrigues.com"/>
+        <meta property="og:url" content="https://miguelrodrigues.onrender.com"/>
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="https://www.miguelamrodrigues.com" />
+        <meta name="twitter:site" content="https://miguelrodrigues.onrender.com" />
         <meta name="twitter:title" content="Miguel Rodrigues - Software Tester"/>
         <meta name="twitter:description" content="ISTQB Certified Software Tester | 
         Ensuring that the apps you use are almost defect free and working as you expect them to!"/>
@@ -67,7 +67,7 @@
                     Once the opportunity to work in the IT industry appeared I decided to give it a try and so I became a software tester.
                     I also enjoy programming a lot and learnt how to program using Python and JAVA. Furthermore, since I've recently learnt HTML and CSS 
                     I decided to put my skills to the test and build this webpage where I talk a bit about myself so that you can get to know me better. 
-                    I intend on doing more projects and post about them here but I'm taking it one step a time. Other than programming I enjoy:</p>
+                    Other than programming I enjoy:</p>
                     <br>
                     <ul id="hobbies">
                         <li>📚 Reading 📚</li>
@@ -151,13 +151,13 @@
                             <input type="checkbox" checked>
                             <i></i>
                             <h2>What have you been playing?</h2>
-                            <p>The Legend of Zelda: Tears of the Kingdom 🎮</p>
+                            <p>The Witcher 3: Wild Hunt 🎮</p>
                         </li>
                         <li>
                             <input type="checkbox" checked>
                             <i></i>
                             <h2>What have you been reading?</h2>
-                            <p>Happy Sugar Life 📚</p>
+                            <p>El amor en los tiempos del cólera 📚</p>
                         </li>
                         <li>
                             <input type="checkbox" checked>
